=== HEAD

* Add :allow_missing_migration_files option to migrators, for not raising if migration files are missing (bporterfield) (#652)

* Fix race condition related to prepared_sql for newly prepared statements (jeremyevans) (#651)

* Support :keep_reference=>false Database option for not adding reference to Sequel::DATABASES (jeremyevans)

* Make Postgres::HStoreOp#- explicitly cast a string argument to text, to avoid PostgreSQL assuming it is an hstore (jeremyevans)

* Add auto_validations plugin, for automatically adding presence, type, and unique validations (jeremyevans)

* Add validates_schema_types validation for validating column values are instances of an appropriate class (jeremyevans)

* Allow validates_type validation to accept an array of allowable classes (jeremyevans)

* Add Database#schema_type_class for getting the ruby class or classes related to the type symbol (jeremyevans)

* Add error_splitter plugin, for splitting multi-column errors into separate errors per column (jeremyevans)

* Skip validates_unique validation if underlying columns are not valid (jeremyevans)

* Allow Model#modified! to take an optional column argument and mark that column as being modified (jeremyevans)

* Allow Model#modified? to take an optional column argument and check if that column has been modified (jeremyevans)

* Make Model.count not issue a database query if using the static_cache plugin (jeremyevans)

* Handle more corner cases in the many_to_one_pk_lookup plugin (jeremyevans)

* Handle database connection during initialization in jdbc adapter (jeremyevans) (#646)

* Add Database.after_initialize, which takes a block and calls the block with each newly created Database instance (ged) (#641)

* Add a guide detailing PostgreSQL-specific support (jeremyevans)

* Make model plugins deal with frozen instances (jeremyevans)

* Allow freezing of model instances for models without primary keys (jeremyevans)
