@@ -1,5 +1,7 @@
 === HEAD
 
+* In the update_primary_key plugin, if the primary key column changes, clear related associations (jeremyevans)
+
 * Add :allow_missing_migration_files option to migrators, for not raising if migration files are missing (bporterfield) (#652)
 
 * Fix race condition related to prepared_sql for newly prepared statements (jeremyevans) (#651)
